--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,49 @@
   margin: 0 auto;
   text-align: center;
 }
+
+.homePage {
+  margin: 20px;
+}
+
+.navbar {
+  background-color: lightskyblue;
+}
+
+.navbar h1 {
+  color: white;
+  text-decoration: none;
+  padding-left: 5vw;
+  font-size: 25px;
+}
+
+.country {
+  display: inline-block;
+  padding: 10px 80px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-decoration: none;
+  color: black;
+  transition: background-color 0.3s ease;
+  width: 20vw;
+  text-align: center;
+  box-sizing: border-box;
+  margin-top: -5px;
+}
+
+.country:hover {
+  background-color: lightskyblue;
+}
+
+.detailPage {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.details {
+  border-bottom: 1px solid #ccc;
+  width: 75vw;
+}
